@@ -9,8 +9,7 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import static org.apache.commons.lang3.StringUtils.isNoneBlank;
 
@@ -19,21 +18,29 @@ public class RecordUtil {
 
     @Value("${record-id.max.length}")
     private Integer recordIdMaxLength;
-    private static final Pattern endingCharacterPattern = Pattern.compile(".*[\\.\\\\\\/]$");
-    private static final String UNSUPPORTED_CHARACTER_ERROR_MESSAGE = "RecordId values ending in dot (.), backslash (\\), or forward slash (/) not allowed";
+
+    private static final String FORBIDDEN_CHARACTER = ".";
     private static final String MAX_LENGTH_ERROR_MESSAGE = "RecordId values which are exceeded 100 symbols temporarily not allowed";
+    private static final String UNSUPPORTED_CHARACTER_ERROR_MESSAGE = "RecordId values ending in dot (.) and without dot (.) are not allowed on same request, please split records in separate requests";
 
     public void validateIds(List<String> inputRecords) {
         if (inputRecords.stream().filter(Objects::nonNull)
                 .anyMatch(id -> id.length() > recordIdMaxLength)) {
-
             throw new AppException(HttpStatus.SC_BAD_REQUEST, "Invalid id", MAX_LENGTH_ERROR_MESSAGE);
         }
-        List<String> recordIds = inputRecords.stream().filter(Objects::nonNull).toList();
-        for (String record : recordIds) {
-            Matcher recordIdMatcher = endingCharacterPattern.matcher(record);
-            boolean matchFound = recordIdMatcher.find();
-            if (matchFound) {
+
+        List<String> recordIds = inputRecords.stream().filter(Objects::nonNull).collect(Collectors.toList());
+        if (recordIds.isEmpty()) {
+            return;
+        }
+        for (String id : recordIds) {
+            // In addition to dot (.), Azure Cloud Storage does not support trailing backslash (\), or forward slash (/) as well,
+            // record-id with these characters is rejected by record-id validator in os-core-common lib.
+            if (!id.endsWith(FORBIDDEN_CHARACTER)) {
+                continue;
+            }
+            String idWithoutForbiddenCharacter = id.substring(0, id.length() - 1);
+            if (recordIds.contains(idWithoutForbiddenCharacter)) {
                 throw new AppException(HttpStatus.SC_BAD_REQUEST, "Invalid id", UNSUPPORTED_CHARACTER_ERROR_MESSAGE);
             }
         }
